--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,15 +1,15 @@
 # .github/workflows/build-and-deploy.yml
 
 name: Node.js CI
-
 on:
   push:
     branches: [ main ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    matrix:
+      node-version: [16.x]
 
     steps:
       # https://github.com/actions/checkout
