--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -8,8 +8,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    matrix:
-      node-version: [16.x]
+    strategy:
+      matrix:
+        node-version: [16.x]
 
     steps:
       # https://github.com/actions/checkout
