--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^11.1.2",
-    "next-seo": "^4.28.1",
+    "next": "^12.3.4",
+    "next-seo": "^4.29.0",
     "next-themes": "^0.0.15",
     "nprogress": "^0.2.0",
     "querystring": "^0.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.1",
-    "swr": "^1.0.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-transition-group": "^4.4.5",
+    "styled-components": "^5.3.6",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.24",
-    "@types/react-transition-group": "^4.4.4",
-    "@types/styled-components": "^5.1.14",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
+    "@types/node": "^18.11.9",
+    "@types/react": "^17.0.24",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/styled-components": "^5.1.26",
+    "eslint": "8.28.0",
+    "eslint-config-next": "13.0.5",
+    "typescript": "^4.4.3"
   }
 }
