--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-],
+  ],
   "exclude": [
     "node_modules"
   ]
