--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
@@ -10,24 +9,25 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^12.3.4",
-    "next-seo": "^4.29.0",
+    "@next/font": "^13.0.5",
+    "next": "13.0.5",
     "next-themes": "^0.0.15",
     "nprogress": "^0.2.0",
     "querystring": "^0.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "@types/react": "^17.0.24",
+    "@types/react": "17.0.43",
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "typescript": "^4.4.3"
+    "eslint-config-next": "^13.0.5",
+    "next-seo": "^5.14.1",
+    "typescript": "^4.9.3"
   }
 }
